oprava gitovske url

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <scm>
     <connection>scm:git:git://github.com/pilmann-oksystem-cz/HelloMaven.git</connection>
     <developerConnection>scm:git:git@github.com:pilmann-oksystem-cz/HelloMaven.git</developerConnection>
-    <url>https://github.com/pilmann-oksystem-cz/HelloMaven.git</url>
+    <url>http://github.com/pilmann-oksystem-cz/HelloMaven</url>
   </scm>
 
   <dependencies>
