--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
             </goals>
 	        <configuration>
 	          <doCheck>true</doCheck>
-	          <doUpdate>true</doUpdate>
+	          <doUpdate>false</doUpdate>
 	          <getRevisionOnlyOnce>false</getRevisionOnlyOnce>
 	          <useLastCommittedRevision>true</useLastCommittedRevision>
 	          <revisionOnScmFailure>NA</revisionOnScmFailure>
@@ -51,13 +51,51 @@
           </execution>
         </executions>
         <configuration>
-          <doCheck>false</doCheck>
+          <doCheck>true</doCheck>
           <doUpdate>false</doUpdate>
           <getRevisionOnlyOnce>false</getRevisionOnlyOnce>
           <useLastCommittedRevision>true</useLastCommittedRevision>
           <revisionOnScmFailure>NA</revisionOnScmFailure>
         </configuration>
         
+      </plugin>
+      
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.3.1</version>
+        <executions>
+          <execution>
+            <id>default-jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <archive>
+                <manifest>
+                  <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                  <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                </manifest>
+                <manifestEntries>
+                  <Implementation-Build>${buildNumber}</Implementation-Build>
+<!--                   <Implementation-Timestamp>${timestamp}</Implementation-Timestamp> -->
+                </manifestEntries>
+              </archive>
+            </configuration>
+          </execution>
+        </executions>
+        <configuration>
+          <archive>
+            <manifest>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+            </manifest>
+            <manifestEntries>
+              <Implementation-Build>${buildNumber}</Implementation-Build>
+<!--               <Implementation-Timestamp>${timestamp}</Implementation-Timestamp> -->
+            </manifestEntries>
+          </archive>
+        </configuration>
       </plugin>
     </plugins>
   </build>
